support format unity

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
         </header>
 
         <main>
+            <div class="support-info">
+                <h4>📋 Formats được hỗ trợ:</h4>
+                <div class="format-list">
+                    <div class="format-item">
+                        <span class="format-name">🎮 Unity TexturePacker</span>
+                        <span class="format-ext">.tpsheet, .json</span>
+                    </div>
+                    <div class="format-item">
+                        <span class="format-name">🐲 Cocos Creator</span>
+                        <span class="format-ext">.plist, .xml</span>
+                    </div>
+                </div>
+            </div>
+            
             <div class="upload-section">
                 <div class="upload-row">
                     <div class="upload-box">
