add function review

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
                 </div>
             </div>
 
+            <div class="review-section" id="reviewSection" style="display: none;">
+                <h4>📋 Review thông tin trước khi giải nén:</h4>
+                <div class="review-content" id="reviewContent">
+                    <!-- Review info will be populated here -->
+                </div>
+            </div>
+
             <div class="controls">
                 <button id="unpackBtn" disabled>Giải nén Sprite Atlas</button>
                 <button id="downloadBtn" disabled>Tải xuống tất cả</button>
@@ -85,6 +92,7 @@
         </main>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
