--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <header>
             <h1>🎨 Texture Unpacker</h1>
             <p>Công cụ giải nén Sprite Atlas từ file .plist và image</p>
+            <div class="author-info">
+                <a href="https://github.com/dmthong181096/unpack-texture" target="_blank" rel="noopener">
+                    <i class="github-icon">⭐</i> Open Source trên GitHub
+                </a>
+            </div>
         </header>
 
         <main>
@@ -90,6 +95,21 @@
                 <div class="texture-grid" id="textureGrid"></div>
             </div>
         </main>
+        
+        <footer>
+            <div class="footer-content">
+                <div class="footer-left">
+                    <p>© 2024 Texture Unpacker - Open Source Project</p>
+                    <p>Tác giả: <strong>dmthong181096</strong></p>
+                </div>
+                <div class="footer-right">
+                    <a href="https://github.com/dmthong181096/unpack-texture" target="_blank" rel="noopener" class="github-link">
+                        <span class="github-icon">📂</span>
+                        <span>GitHub Repository</span>
+                    </a>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
